#
# Copyright Soramitsu Co., Ltd. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0
#

add_subdirectory(ametsuchi)
add_subdirectory(consensus)
add_subdirectory(main)
add_subdirectory(ordering)
add_subdirectory(validation)
add_subdirectory(torii)
add_subdirectory(network)
add_subdirectory(model)
add_subdirectory(simulator)
add_subdirectory(synchronizer)
add_subdirectory(multi_sig_transactions)
add_subdirectory(pending_txs_storage)
add_subdirectory(util)
